#2352 Node context toolbar with an overflow menu and toolbar items behave oddly on Safari-fix-fixing cypress test

--- a/canvas_modules/common-canvas/src/toolbar/toolbar.scss
+++ b/canvas_modules/common-canvas/src/toolbar/toolbar.scss
@@ -179,7 +179,7 @@ $toolbar-divider-width: 1px;
 
 .toolbar-overflow-item {
 	background-color: $layer-01;
-
+	width: 30px; // Setting up the width as removing the inline-block from the child
 	& button {
 		padding: 0;
 		height: $toolbar-button-height;
